Switch to scalajs-bundler #56